--- a/Bounty_Hunter/package.json
+++ b/Bounty_Hunter/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "web3": "^1.0.0-beta.52"
   },
   "scripts": {
     "start": "react-scripts start",
