--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
+    "dotenv": "^8.1.0",
     "truffle": "^5.0.12",
     "truffle-hdwallet-provider": "^1.0.6"
   }
